--- a/client/app/app.less
+++ b/client/app/app.less
@@ -15,6 +15,21 @@
     padding: 0.2em 0;
 }
 
+.preview{
+  padding: 40px 0;
+
+  .row{
+    margin-top: 30px;
+  }
+
+  .preview-image{
+    padding: 10px;
+    img{
+      width: 100%;
+    }
+  }
+}
+
 // injector
 @import 'main/main.less';
 @import 'newWork/newWork.less';
