--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -1,30 +1,32 @@
-.thing-form {
-  margin: 20px 0;
+.home{
+  .item{
+    margin-bottom: 20px;
+    img{
+      width: 100%;
+//      max-height: 238px;
+    }
+  }
+}
+@media screen and (min-width: 1200px){
+  .item{
+    img{
+      max-height: 238px;
+    }
+  }
 }
 
-#banner {
-    border-bottom: none;
-    margin-top: -20px;
+@media screen  and (min-width: 992px) and  (max-width: 1200px){
+  .item{
+    img{
+      max-height: 188px;
+    }
+  }
 }
 
-#banner h1 {
-    font-size: 60px;
-    line-height: 1;
-    letter-spacing: -1px;
-}
-
-.hero-unit {
-    position: relative;
-    padding: 30px 15px;
-    color: #F5F5F5;
-    text-align: center;
-    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-    background: #4393B9;
-}
-
-.footer {
-    text-align: center;
-    padding: 30px 0;
-    margin-top: 70px;
-    border-top: 1px solid #E5E5E5;
+@media screen  and (min-width: 768px) and  (max-width: 992px){
+  .item{
+    img{
+      max-height: 229px;
+    }
+  }
 }
