--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -3,23 +3,18 @@
     margin-bottom: 20px;
     img{
       width: 100%;
-//      max-height: 238px;
     }
   }
 }
 @media screen and (min-width: 1200px){
   .item{
-    img{
-      max-height: 238px;
-    }
+    height: 277px;
   }
 }
 
 @media screen  and (min-width: 992px) and  (max-width: 1200px){
   .item{
-    img{
-      max-height: 188px;
-    }
+    height: 227px;
   }
 }
 
